[gd_scene load_steps=39 format=2]

[ext_resource path="res://art/ui/Spawner.png" type="Texture" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/ui/tap_hand.png" type="Texture" id=4]
[ext_resource path="res://art/ui/leica.png" type="Texture" id=5]
[ext_resource path="res://art/ui/shovel.png" type="Texture" id=6]
[ext_resource path="res://art/ui/weed.png" type="Texture" id=7]
[ext_resource path="res://art/ui/worm.png" type="Texture" id=8]
[ext_resource path="res://art/ui/butterfly_net.png" type="Texture" id=9]
[ext_resource path="res://art/bg.png" type="Texture" id=10]
[ext_resource path="res://art/trees/simple3.png" type="Texture" id=11]
[ext_resource path="res://art/trees/simple2.png" type="Texture" id=12]
[ext_resource path="res://art/ui/hor.png" type="Texture" id=13]
[ext_resource path="res://art/trees/simple1.png" type="Texture" id=14]
[ext_resource path="res://art/ui/coin.png" type="Texture" id=15]
[ext_resource path="res://Roboto/Roboto-Medium.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://art/ui/button2.png" type="Texture" id=17]
[ext_resource path="res://Edoy-Waiting.ogg" type="AudioStream" id=18]
[ext_resource path="res://art/ui/button4.png" type="Texture" id=19]
[ext_resource path="res://art/ui/button3.png" type="Texture" id=20]
[ext_resource path="res://RefreshFix.gd" type="Script" id=21]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Shovel"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Shovel"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=10]
resource_name = "Rain"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Pick"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../Worm")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=14]
resource_name = "Shovel"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2, 3 ]
}

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 100
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=17]
size = 64
font_data = ExtResource( 3 )

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="Cam" type="Camera2D" parent="."]
offset = Vector2( 540, 960 )
current = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 573.656, 841.978 )
scale = Vector2( 15, 15 )
texture = ExtResource( 10 )

[node name="Spawner" type="Sprite" parent="."]
position = Vector2( 541.482, 1330.29 )
scale = Vector2( 12, 12 )
texture = ExtResource( 1 )

[node name="Tree" type="Sprite" parent="."]
position = Vector2( 550.407, 1321.36 )
scale = Vector2( 15, 15 )
offset = Vector2( 0, -30 )

[node name="Weed" type="Sprite" parent="."]
visible = false
position = Vector2( 536.716, 1311.26 )
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )
offset = Vector2( 0, -10 )
hframes = 2

[node name="Anim" type="AnimationPlayer" parent="Weed"]
autoplay = "Shovel"
anims/RESET = SubResource( 5 )
anims/Shovel = SubResource( 6 )

[node name="Worm" type="Sprite" parent="."]
visible = false
position = Vector2( 684.357, 842.105 )
scale = Vector2( 10, 10 )
texture = ExtResource( 8 )
offset = Vector2( 0, -4 )
hframes = 2

[node name="Anim" type="AnimationPlayer" parent="Worm"]
autoplay = "Shovel"
anims/RESET = SubResource( 7 )
anims/Shovel = SubResource( 8 )

[node name="TapHand" type="Sprite" parent="."]
visible = false
position = Vector2( 550.309, 1265.19 )
rotation = -0.741208
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )
offset = Vector2( 3, 8 )
hframes = 2
vframes = 2

[node name="Anim" type="AnimationPlayer" parent="TapHand"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Leica" type="Sprite" parent="."]
visible = false
position = Vector2( 743.998, 713.602 )
scale = Vector2( 10, 10 )
texture = ExtResource( 5 )
offset = Vector2( 3, 8 )
hframes = 2
vframes = 2

[node name="Anim" type="AnimationPlayer" parent="Leica"]
anims/RESET = SubResource( 9 )
anims/Rain = SubResource( 10 )

[node name="Net" type="Sprite" parent="."]
visible = false
position = Vector2( 743.998, 713.602 )
scale = Vector2( 10, 10 )
texture = ExtResource( 9 )
offset = Vector2( 3, 8 )
hframes = 2
vframes = 2

[node name="Anim" type="AnimationPlayer" parent="Net"]
anims/Pick = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="Shovel" type="Sprite" parent="."]
visible = false
position = Vector2( 662.481, 1212.89 )
scale = Vector2( 10, 10 )
texture = ExtResource( 6 )
offset = Vector2( 3, 8 )
hframes = 2
vframes = 2

[node name="Anim" type="AnimationPlayer" parent="Shovel"]
anims/RESET = SubResource( 13 )
anims/Shovel = SubResource( 14 )

[node name="Money" type="Label" parent="."]
margin_left = 190.44
margin_top = 55.9438
margin_right = 630.44
margin_bottom = 150.944
custom_fonts/font = SubResource( 1 )
text = "6969"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Money"]
margin_left = -143.082
margin_top = -18.6629
margin_right = 48.9175
margin_bottom = 109.337
texture = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="Timer" type="Label" parent="."]
margin_left = 3.0
margin_top = 1495.59
margin_right = 1081.0
margin_bottom = 1590.59
custom_fonts/font = SubResource( 2 )
text = "01:59:59"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrowButton" type="TextureButton" parent="."]
margin_left = 254.0
margin_top = 361.0
margin_right = 838.0
margin_bottom = 1421.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WormButton" type="TextureButton" parent="."]
visible = false
margin_left = 567.516
margin_top = 714.593
margin_right = 764.516
margin_bottom = 911.593
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterButton" type="TextureButton" parent="."]
margin_left = 458.538
margin_top = 1633.87
margin_right = 655.538
margin_bottom = 1830.87
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="WaterButton"]
margin_left = 76.9954
margin_top = 120.05
margin_right = 284.995
margin_bottom = 215.05
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyMenu" type="ColorRect" parent="."]
visible = false
margin_left = 93.0
margin_top = 575.0
margin_right = 996.0
margin_bottom = 1378.0
color = Color( 0.52549, 0.356863, 0.219608, 1 )

[node name="Close" type="TextureButton" parent="BuyMenu"]
margin_left = -28796.0
margin_top = -11341.0
margin_right = 20014.0
margin_bottom = 12984.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="TextureButton" parent="BuyMenu"]
margin_left = 34.1489
margin_top = 36.1489
margin_right = 876.149
margin_bottom = 262.149

[node name="ColorRect" type="ColorRect" parent="BuyMenu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.631373, 0.631373, 0.631373, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BuyMenu/Control"]
margin_left = 15.1178
margin_top = -26.8972
margin_right = 169.118
margin_bottom = 219.103
mouse_filter = 2
texture = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="BuyMenu/Control"]
margin_left = 211.637
margin_top = 73.3696
margin_right = 296.637
margin_bottom = 156.37
mouse_filter = 2
texture = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="BuyMenu/Control"]
margin_left = 499.173
margin_top = 73.3696
margin_right = 584.173
margin_bottom = 156.37
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="BuyMenu/Control"]
margin_left = 320.664
margin_top = 85.5681
margin_right = 414.664
margin_bottom = 142.568
custom_fonts/font = SubResource( 15 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="BuyMenu/Control"]
margin_left = 605.975
margin_top = 85.5681
margin_right = 791.975
margin_bottom = 142.568
custom_fonts/font = SubResource( 15 )
text = "02:00:00"

[node name="Control2" type="TextureButton" parent="BuyMenu"]
margin_left = 34.1489
margin_top = 291.598
margin_right = 876.149
margin_bottom = 517.598
disabled = true

[node name="ColorRect" type="ColorRect" parent="BuyMenu/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.631373, 0.631373, 0.631373, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BuyMenu/Control2"]
margin_left = 32.6858
margin_top = -39.0
margin_right = 251.686
margin_bottom = 219.0
mouse_filter = 2
texture = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="BuyMenu/Control2"]
margin_left = 211.637
margin_top = 73.3696
margin_right = 296.637
margin_bottom = 156.37
mouse_filter = 2
texture = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="BuyMenu/Control2"]
margin_left = 499.173
margin_top = 73.3696
margin_right = 584.173
margin_bottom = 156.37
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="BuyMenu/Control2"]
margin_left = 320.664
margin_top = 85.5681
margin_right = 414.664
margin_bottom = 142.568
custom_fonts/font = SubResource( 15 )
text = "300"

[node name="Label2" type="Label" parent="BuyMenu/Control2"]
margin_left = 605.975
margin_top = 85.5681
margin_right = 791.975
margin_bottom = 142.568
custom_fonts/font = SubResource( 15 )
text = "04:00:00"

[node name="ColorRect2" type="ColorRect" parent="BuyMenu/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.25098, 0.25098, 0.25098, 0.623529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BuyMenu/Control2/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -59.0
margin_right = 421.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 16 )
text = "LOCKED"
align = 1
valign = 1

[node name="Control3" type="TextureButton" parent="BuyMenu"]
margin_left = 34.1489
margin_top = 548.897
margin_right = 876.149
margin_bottom = 774.897
disabled = true

[node name="ColorRect" type="ColorRect" parent="BuyMenu/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
input_pass_on_modal_close_click = false
color = Color( 0.631373, 0.631373, 0.631373, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="BuyMenu/Control3"]
margin_left = 15.0
margin_top = -82.0
margin_right = 169.0
margin_bottom = 220.0
input_pass_on_modal_close_click = false
texture = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="BuyMenu/Control3"]
margin_left = 211.637
margin_top = 73.3696
margin_right = 296.637
margin_bottom = 156.37
input_pass_on_modal_close_click = false
texture = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="BuyMenu/Control3"]
margin_left = 499.173
margin_top = 73.3696
margin_right = 584.173
margin_bottom = 156.37
input_pass_on_modal_close_click = false
texture = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="BuyMenu/Control3"]
margin_left = 320.664
margin_top = 85.5681
margin_right = 414.664
margin_bottom = 142.568
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 15 )
text = "500"

[node name="Label2" type="Label" parent="BuyMenu/Control3"]
margin_left = 605.975
margin_top = 85.5681
margin_right = 791.975
margin_bottom = 142.568
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 15 )
text = "06:00:00"

[node name="ColorRect2" type="ColorRect" parent="BuyMenu/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
input_pass_on_modal_close_click = false
color = Color( 0.25098, 0.25098, 0.25098, 0.623529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BuyMenu/Control3/ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -421.0
margin_top = -59.0
margin_right = 423.0
margin_bottom = 59.0
input_pass_on_modal_close_click = false
custom_fonts/font = SubResource( 16 )
text = "LOCKED"
align = 1
valign = 1

[node name="NoMoney" type="ColorRect" parent="."]
visible = false
margin_left = 93.0
margin_top = 715.761
margin_right = 996.0
margin_bottom = 1317.76
color = Color( 0.52549, 0.356863, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WatchReward" type="TextureButton" parent="NoMoney"]
margin_left = 128.708
margin_top = 359.722
margin_right = 325.708
margin_bottom = 556.722
texture_normal = ExtResource( 20 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="NoMoney"]
margin_left = 575.421
margin_top = 359.722
margin_right = 772.421
margin_bottom = 556.722
texture_normal = ExtResource( 19 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="NoMoney"]
margin_left = -18.6212
margin_top = 105.706
margin_right = 924.379
margin_bottom = 298.706
custom_fonts/font = SubResource( 17 )
text = "NO_MONEY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoWater" type="ColorRect" parent="."]
visible = false
margin_left = 93.0
margin_top = 715.761
margin_right = 996.0
margin_bottom = 1317.76
color = Color( 0.52549, 0.356863, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WatchReward" type="TextureButton" parent="NoWater"]
margin_left = 128.708
margin_top = 359.722
margin_right = 325.708
margin_bottom = 556.722
texture_normal = ExtResource( 20 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="TextureButton" parent="NoWater"]
margin_left = 575.421
margin_top = 359.722
margin_right = 772.421
margin_bottom = 556.722
texture_normal = ExtResource( 19 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="NoWater"]
margin_left = -18.6212
margin_top = 105.706
margin_right = 924.379
margin_bottom = 298.706
custom_fonts/font = SubResource( 17 )
text = "NO_WATER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RefreshFix" type="Node" parent="."]
script = ExtResource( 21 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -22.724
pitch_scale = 0.99
autoplay = true
